--- a/source/pages/home/home.html
+++ b/source/pages/home/home.html
@@ -3,17 +3,15 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>SoundCloud</title>
+	<link rel="stylesheet" type="text/css" href="../../assets/css/main.css"/>
 	<link rel="stylesheet" type="text/css" href="./home.css"/>
-	<link rel="stylesheet" type="image/x-icon" href="#"/>
 </head>
 <body>
 	<header id="userpic search" class="search avatar">
-		<div class="container">
-			<form action="">
-				<input type="text" value="Search"/>
-				<img type="image/jpeg" src="photo.jpg" alt="avatar"/>
-			</form>
-		</div>
+		<form action="">
+			<input type="text" value="Search"/>
+			<img type="image/jpeg" src="photo.jpg" alt="avatar"/>
+		</form>
 	</header>
 	<main id="items" class="content widget">
 		<div class="container">
@@ -21,20 +19,16 @@
 		</div>
 	</main>
 	<aside id="sidebar" class="sidebar">
-		<div class="container">
-			<div class="topic">
-				
-			</div>
+		<div class="topic">
+			
 		</div>
 	</aside>
 	<footer id="wrapper" class="player">
-		<div class="container">
-			<div class="pic">
+		<div class="pic">
 				
-			</div>
-			<h4>Name</h4>
 		</div>
+		<h4>Name</h4>
 	</footer>
-	<script type="text/javascript" src="#"></script>
+	<script type="text/javascript" src="./home.js"></script>
 </body>
 </html>
