--- a/source/pages/home/home.html
+++ b/source/pages/home/home.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>SoundCloud</title>
+	<title>Title</title>
 	<link rel="stylesheet" type="text/css" href="../../assets/css/main.css"/>
 	<link rel="stylesheet" type="text/css" href="./home.css"/>
 </head>
 <body>
 	<header id="userpic search" class="search avatar">
-		<form action="">
-			<input type="text" value="Search"/>
-			<img type="image/jpeg" src="photo.jpg" alt="avatar"/>
-		</form>
+		<input type="text" value="Search"/>
+		<img src="photo.jpg"/>
 	</header>
 	<main id="items" class="content widget">
 		<div class="container">
@@ -20,14 +18,11 @@
 	</main>
 	<aside id="sidebar" class="sidebar">
 		<div class="topic">
-			
+			<img type="image/svg+xml" src="../../assets/img/like.svg" alt="Likes"/>
 		</div>
 	</aside>
-	<footer id="wrapper" class="player">
-		<div class="pic">
-				
-		</div>
-		<h4>Name</h4>
+	<footer id="footer" class="footer">
+		s
 	</footer>
 	<script type="text/javascript" src="./home.js"></script>
 </body>
