--- a/source/pages/home/home.html
+++ b/source/pages/home/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>Title</title>
+	<title>SoundCloud</title>
 	<link rel="stylesheet" type="text/css" href="../../assets/css/main.css"/>
 	<link rel="stylesheet" type="text/css" href="./home.css"/>
 </head>
