Update home page

--- a/source/pages/home/home.html
+++ b/source/pages/home/home.html
@@ -11,10 +11,10 @@
 		<form action="">
 			<input type="text" placeholder="Search"/>
 			<button type="submit">
-				<img type="image/svg+xml" src="../../assets/img/search.svg" alt="Search"/>
+				<img type="image/svg+xml" width="32" height="32" src="../../assets/img/search.svg" alt="Search"/>
 			</button>
 		</form>
-		<img class="avatar" src="photo.jpg" alt="Photo"/>
+		<img class="avatar" width="75" height="75" src="photo.jpg" alt="Photo"/>
 	</header>
 	<main id="items" class="content widget">
 		<div class="container">
