--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,7 +44,7 @@
 		</div>
 	</aside>
 	<footer id="footer" class="footer">
-		s
+		<!-- <img type="image/svg+xml" src="../../assets/img/null.png" alt="null"/> -->
 	</footer>
 	<script type="text/javascript" src="./home.js"></script>
 </body>
