change: home page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,55 +11,18 @@
 	<div class="wrapper">
 		<div class="search">
 			<input type="text" placeholder="Search"/>
+			<div class="avatar"></div>
 		</div>
 		<div class="content">
-			
+			<div class="container"></div>
 		</div>
 		<div class="sidebar">
-			
+			<div class="topic"></div>
 		</div>
 		<div class="music">
-			
+			<div class="info"></div>
 		</div>
 	</div>
-
-	<!--
-	<header id="userpic search" class="search">
-		<form action="">
-			<input type="text" placeholder="Search"/>
-			<button type="submit">
-				<img type="image/svg+xml" width="32" height="32" src="../../assets/img/search.svg" alt="Search"/>
-			</button>
-		</form>
-			<img class="avatar" width="75" height="75" src="photo.jpg" alt="Photo"/>
-	</header>
-	<main id="items" class="content widget">
-		<div class="container">
-			<div class="playlist">
-				
-			</div>
-		</div>
-	</main>
-	<aside id="sidebar" class="sidebar">
-		<a href="https://google.com">
-			
-		</a>
-		<div class="topic">
-			<a href="">
-				<img type="image/svg+xml" width="50" height="50" src="../../assets/img/like.svg" alt="Likes"/>
-			</a>
-			<a href="">
-				<img type="image/svg+xml" width="50" height="50" src="../../assets/img/story.svg" alt="History"/>
-			</a>
-			<a href="">
-				<img class="add-playlist" type="image/svg+xml" width="50" height="50" src="../../assets/img/add.svg" alt="Add"/>
-			</a>
-		</div>
-	</aside>
-	<footer id="footer" class="footer">
-		<img type="image/svg+xml" src="../../assets/img/null.png" alt="null"/> 
-	</footer>
-	-->
 
 	<script type="text/javascript" src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
 	<script type="text/javascript">
