--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
+	<!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'"/>
+	<meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'"/>
 	<title>SoundCloud</title>
 	<link rel="stylesheet" type="text/css" href="../../assets/css/main.css"/>
 	<link rel="stylesheet" type="text/css" href="./home.css"/>
