home: add player template

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,8 +22,19 @@
 		<div class="sidebar">
 			<div class="topic"></div>
 		</div>
+
+		<!-- Player Info -->
 		<div class="music">
-			<div class="info"></div>
+			<div class="title">
+				<span id="title">-</span>
+			</div>
+			<div class="author">
+				<span id="author">-</span>
+			</div>
+			<div class="duration">
+				<span id="current">--:--</span>
+				<span id="duration">--:--</span>
+			</div>
 		</div>
 	</div>
 
