--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -38,6 +38,10 @@
 		</div>
 	</div>
 
+	<div class="if-offline" class="hide">
+		<i class="medium">wifi_off</i>
+	</div>
+
 	<script type="text/javascript" src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
 	<script type="text/javascript">
 		SC.initialize({
