--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,12 +10,27 @@
 <body>
 	<header class="wrapper">
 		<nav id="navbar" class="nav">
-			<input type="text" placeholder="Search"/>
+			<!-- <form action="./home.js" method="GET"> -->
+				<input type="text" name="Search" placeholder="Search"/>
+				<button type="submit" value="Send">
+					<img type="image/svg+xml" src="../../assets/loupe.svg" alt="Loupe"/>
+				</button>
+			<!-- </form> -->
 			<img class="avatar" type="image/svg+xml" src="../../assets/missing.svg" alt="Profile Photo"/>
 		</nav>
 	</header>
 	<main>
-		
+		<div class="container">
+			<div class="one">
+				<img type="image/svg+xml" src="../../assets/missing.svg" alt="Album Cover">
+			</div>
+			<div class="two">
+				
+			</div>
+			<div class="three">
+				
+			</div>
+		</div>
 	</main>
 	<aside class="sidebar">
 		<img type="image/svg+xml" src="../../assets/burger.svg" alt="Burger"/>
@@ -25,17 +40,17 @@
 					<img type="image/svg+xml" src="../../assets/like.svg" alt="Likes"/>
 				</a>
 			</li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
+			<!-- <li><a href="#"></a></li> -->
+			<!-- <li><a href="#"></a></li> -->
 		</ul>
 	</aside>
 	<footer id="music-container" class="music">
 		<div class="player">
 			<img class="cover" type="image/svg+xml" src="../../assets/missing.svg" alt="Music Cover"/>
 			<ul class="info">
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
+				<!-- <li><a href="#"></a></li> -->
+				<!-- <li><a href="#"></a></li> -->
+				<!-- <li><a href="#"></a></li> -->
 			</ul>
 		</div>
 		<div class="container">
